--- a/.env.example
+++ b/.env.example
@@ -31,4 +31,4 @@ TRAKT_OAUTH_REFRESH=
 TRAKT_OAUTH_TOKEN=
 TRAKT_USERNAME=
 
-USER_AGENT=
+USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:103.0) Gecko/20100101 Firefox/103.0
